--- a/config.yaml
+++ b/config.yaml
@@ -6,13 +6,13 @@ logger:
 mdbx:
   enabled: true
   nodes:
-  - name: fdb
-    path: ~/.fdb/db          # Location of where mdbx database will be found
-    maxReaders: 4096         # Maximum number of concurrent database readers
-    maxSize: 1024            # Maximum database size (1 TB)
-    minSize: 1               # Minimum database size (1 MB)
-    growthStep: 65536         # Growth step size (4 KB)
-    filePermissions: 0600    # File permissions for the database
+    - name: fdb
+      path: /tmp/
+      maxReaders: 4096
+      maxSize: 1024            # Maximum database size (1 TB)
+      minSize: 1               # Minimum database size (1 GB)
+      growthStep: 4096         # Growth step size (4 KB)
+      filePermissions: 0600    # File permissions for the database
 
 transports:
   - type: dummy
@@ -20,6 +20,7 @@ transports:
     config:
       ipv4: 127.0.0.1
       port: 4434
+
   - type: quic
     enabled: true
     config:
@@ -29,16 +30,28 @@ transports:
         insecure: true
         key: ./data/certs/key.pem
         cert: ./data/certs/cert.pem
+
   - type: uds
     enabled: true
     config:
       socket: "/tmp/fdb.sock"
+
   - type: tcp
     enabled: true
     config:
       ipv4: 127.0.0.1
       port: 5011
       tls:
+        insecure: true
+        key: ./data/certs/key.pem
+        cert: ./data/certs/cert.pem
+
+  - type: udp
+    enabled: true
+    config:
+      ipv4: 127.0.0.1
+      port: 5022
+      dtls:
         insecure: true
         key: ./data/certs/key.pem
         cert: ./data/certs/cert.pem
