--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,33 +6,36 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080" # Map the container's port 8080 to the host
+      - "4434:4434"  # Mapping the dummy service port
+      - "4433:4433"  # Mapping the QUIC service port
+      - "5011:5011"  # Mapping the TCP service port
+      - "5022:5022"  # Mapping the UDP service port
+      - "4060:4060"  # Mapping for pprof
     restart: always
     environment:
-      - ENV_VAR1=value1
-      - ENV_VAR2=value2
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317 # OpenTelemetry Collector endpoint
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317  # OpenTelemetry Collector endpoint
     volumes:
-      - ./data:/app/data
-    command: ["./fdb", "serve"]
+      - ./data:/app/data  # Mounting the data directory for certs and other resources
+      - ./config.yaml:/fdb/config.yaml  # Mounting the configuration file
+    command: ["./fdb", "serve", "--config", "/fdb/config.yaml"]
     depends_on:
-      - otel-collector # Ensure fdb service starts after the OpenTelemetry collector
+      - otel-collector  # Ensure fdb service starts after OpenTelemetry collector
 
   otel-collector:
     image: otel/opentelemetry-collector:latest
     ports:
-      - "4317:4317" # OTLP gRPC receiver
-      - "4318:4318" # OTLP HTTP receiver
-      - "55680:55680" # OpenTelemetry protocol receiver
+      - "4317:4317"  # OTLP gRPC receiver
+      - "4318:4318"  # OTLP HTTP receiver
+      - "55680:55680"  # OpenTelemetry protocol receiver
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml # Mount the custom config for the OpenTelemetry collector
+      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml  # Mounting custom config for OpenTelemetry collector
 
   jaeger:
     image: jaegertracing/all-in-one:1.29
     ports:
-      - "16686:16686" # Jaeger UI
-      - "14250:14250" # Jaeger gRPC
-      - "6831:6831/udp" # Jaeger UDP port for traces
+      - "16686:16686"  # Jaeger UI
+      - "14250:14250"  # Jaeger gRPC
+      - "6831:6831/udp"  # Jaeger UDP port for traces
     environment:
-      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411  # Zipkin compatibility mode
