--- a/deployments/otel-collector-config.yaml
+++ b/deployments/otel-collector-config.yaml
@@ -5,12 +5,13 @@ receivers:
       http:
 
 exporters:
-  jaeger:
-    endpoint: "http://jaeger:14250"
-    insecure: true
+  otlp:
+    endpoint: "http://jaeger:4317"
+    tls:
+      insecure: true
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [jaeger]
+      exporters: [otlp]
